Adicionando menu na pagina inicial

--- a/Codigos/Pagina inicial/Index.html
+++ b/Codigos/Pagina inicial/Index.html
@@ -9,8 +9,32 @@
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-
         <header>
+            <!--Div que vai agrupar o input de busca e a logo-->
+    
+            <div id="destaque">
+                <a href="#" class="logo">Biblioteca Nacional</a>
+                <input type="search" class="seach" placeholder="Buscar no Site">
+            </div>
+    
+            <nav>
+                <!--Definindo os links do menu -->
+                <ul>
+                    <li><a href="#">Pagina Inicial</a></li>
+                    <li><a href="#">Curiosidades</a></li>
+                    <li><a href="#">Visitas</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Como chegar</a></li>
+                </ul>
+            </nav>
+            <!-- Adicionado dois a para idiomas  -->
+            <div class="idiomas">
+                <a href="">English</a>
+                <a href="">Espanol</a>
+            </div>
+        </header>
+        <!--Desenvolvedor by Guilherme Ferreira-->
+
             <!--Separando as seçoes para cada grupos-->
             <section class="conteudo_home">
                 <h1 class="classH1">Biblioteca Nacional</h1>
@@ -32,7 +56,6 @@
                 <a href="">História</a>
             </section>
             <!--Desenvolvedor Guilherme Ferreira-->
-        </header>
 
         <div id="container">
             <!-- noticias -->
