--- a/Codigos/Curiosidades/Index.html
+++ b/Codigos/Curiosidades/Index.html
@@ -14,35 +14,35 @@
 
     <div class="img-slider">
         <div id="atual" class="slide">
-            <img src="imagem_inicial .jpg" alt="">
+            <img src="Img/imagem_inicial.jpg" alt="">
             <div class="info">
                 <h2>Autores</h2>
                 <p>Confira a seguir as principais curiosidades de alguns escritores brasileiros.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="Olavo_Bilac.jpg" alt="">
+            <img src="Img/Olavo_Bilac.jpg" alt="Imagem de Olavo Bilac">
             <div class="info">
                 <h2>Olavo Bilac</h2>
                 <p>Sofreu o primeiro acidente de carro registrado no Brasil. Ao bater o carro do amigo José do Patrocínio no final do século 19.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="drummond.jpg" alt="">
+            <img src="Img/drummond.jpg" alt="Imagem de Drummond">
             <div class="info">
                 <h2>Carlos Drummond de Andrade</h2>
                 <p>Nunca fez parte da Academia Brasileira de Letras. Tem um arquivo pessoal com mais de mil e oitocentas cartas.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="clarice.jpg" alt="">
+            <img src="Img/clarice.jpg" alt="Imagem de Clarice">
             <div class="info">
                 <h2>Clarice Lispector</h2>
                 <p>Concedeu somente uma entrevista em vida, quando acabou de escrever "A Hora da Estrela" em 1977. A entrevista foi divulgada após sua morte.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="Graciliano.jpg" alt="">
+            <img src="Img/graciliano.jpg" alt="Imagem de Graciliano">
             <div class="info">
                 <h2>Graciliano Ramos</h2>
                 <p>Foi prefeito da cidade de Palmeira dos Índios, em Alagoas. Criou uma lei de proibição da criação de animais na rua, lei que usou para multar o pai que criava porcos em vias públicas.</p>
