--- a/Codigos/Videos/index.html
+++ b/Codigos/Videos/index.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
-    <title>Videos Literatura</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Videos</title>
 </head>
 
 <body>
-    <div class="container">
-        <h1>Videos Disponiveis</h1>
-        <div class="row">
-            <div class="col">
-                <div class="img">
-                    <img src="img_1.jpg" width="100%">
-                    <img src="play.png" class="btn_play">
-                </div>
+    <div class="conteudo">
+        <div class="cabecalho">Videos Literarios</div>
+        <div class="conteudo_vid">
+            <div class="video">
+                <video src="video1.mp4"></video>
             </div>
-            <div class="col">
-                <div class="img_peq">
-                    <div class="img_small">
-                        <img src="img_2.jpg">
-                    </div>
-                    <p>Resumo Vidas Secas</p>
-                </div>
-                <div class="col">
-                    <div class="img_peq">
-                        <div class="img_small">
-                            <img src="img_3.jpg">
-                        </div>
-                        <p>Se Encante com os Livros</p>
-                    </div>
-                </div>
+            <div class="video">
+                <video src="video2.mp4"></video>
             </div>
+            <div class="video">
+                <video src="video3.mp4"></video>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        var video = document.querySelectorAll('video')
+
+        video.forEach(play => play.addEventListener('click', () => {
+            play.classList.toggle('active');
+
+            if (play.paused) {
+                play.play();
+            } else {
+                play.pause();
+                play.currentTime = 0;
+            }
+        }));
+    </script>
+    <!-- Desenvolvedor: Davi Costa -->
 </body>
+
+</html>
