Adicionando comentario autoral

--- a/Codigos/Como_Chegar/ComoChegar.html
+++ b/Codigos/Como_Chegar/ComoChegar.html
@@ -48,6 +48,7 @@
         Fundação Biblioteca Nacional <br> Av. Rio Branco 219 Rio de Janeiro, RJ 20040-008</p>
     </div>
 
+    <!--Div com o conteudo que mostra os acessos para a Bibliotexa Nacional-->
     <div class="acessos">
         <h2>Os meios de transporte para acesso são:</h2>
 
