--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
         <title>Página Inicial - BN</title>
         <meta charset="utf-8">
         <link rel = "stylesheet" href ="StylePgI.css">
-        <link rel = "stylesheet" href ="StyleHeader.css">
+        <link rel = "stylesheet" href ="styleHeader.css">
         <link rel = "stylesheet" href ="StyleFooter.css">
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -50,7 +50,7 @@
         
             <!--Links que eram acessar topícos do site-->
             <section class="links">
-                <a href="#">Acervo</a>
+                <a href="/Codigos/TabelaDeLivros/tabeladelivros.html">Acervo</a>
                 <a href="#">Videos</a>
                 <a href="#">Ajuda</a>
                 <a href="">História</a>
