--- a/Codigos/Pagina_inicial/Index.html
+++ b/Codigos/Pagina_inicial/Index.html
@@ -51,7 +51,7 @@
             <!--Links que eram acessar topícos do site-->
             <section class="links">
                 <a href="/Codigos/TabelaDeLivros/tabeladelivros.html">Acervo</a>
-                <a href="#">Videos</a>
+                <a href="/Codigos/Videos/index.html">Videos</a>
                 <a href="#">Ajuda</a>
                 <a href="">História</a>
             </section>
