--- a/Codigos/Pagina_inicial/Index.html
+++ b/Codigos/Pagina_inicial/Index.html
@@ -21,7 +21,7 @@
                 <!--Definindo os links do menu -->
                 <ul>
                     <li><a href="#">Pagina Inicial</a></li>
-                    <li><a href="#">Curiosidades</a></li>
+                    <li><a href="/Codigos/Curiosidades/">Curiosidades</a></li>
                     <li><a href="#">Visitas</a></li>
                     <li><a href="">Sobre</a></li>
                     <li><a href="">Como chegar</a></li>
@@ -52,7 +52,7 @@
             <section class="links">
                 <a href="/Codigos/TabelaDeLivros/tabeladelivros.html">Acervo</a>
                 <a href="/Codigos/Videos/index.html">Videos</a>
-                <a href="#">Ajuda</a>
+                <a href="/Codigos/FAQ/index.html">Ajuda</a>
                 <a href="">História</a>
             </section>
             <!--Desenvolvedor Guilherme Ferreira-->
