--- a/Codigos/Pagina_inicial/Index.html
+++ b/Codigos/Pagina_inicial/Index.html
@@ -21,10 +21,10 @@
                 <!--Definindo os links do menu -->
                 <ul>
                     <li><a href="#">Pagina Inicial</a></li>
-                    <li><a href="/Codigos/Curiosidades/">Curiosidades</a></li>
-                    <li><a href="#">Visitas</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Como chegar</a></li>
+                    <li><a href="">Curiosidades</a></li>
+                    <li><a href="/Codigos/Tela_Visitas/Visitas.html">Visitas</a></li>
+                    <li><a href="/Codigos/Galeria/Index.html">Sobre</a></li>
+                    <li><a href="/Codigos/Como_Chegar/ComoChegar.html">Como chegar</a></li>
                 </ul>
             </nav>
             <!-- Adicionado dois a para idiomas  -->
@@ -45,7 +45,7 @@
                     Login/Entrar
                 </button>
         
-                <a class="cadastro" href="#">Faça  seu cadastro</a>
+                <a class="cadastro" href="/Codigos/Formulario/Cadastro/index.html">Faça  seu cadastro</a>
             </section>
         
             <!--Links que eram acessar topícos do site-->
