--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="#">Pagina Inicial</a></li>
                     <li><a href="#">Curiosidades</a></li>
-                    <li><a href="#">Visitas</a></li>
+                    <li><a href="/Codigos/Tela_Visitas/Visitas.html">Visitas</a></li>
                     <li><a href="">Sobre</a></li>
                     <li><a href="">Como chegar</a></li>
                 </ul>
@@ -51,9 +51,9 @@
             <!--Links que eram acessar topícos do site-->
             <section class="links">
                 <a href="/Codigos/TabelaDeLivros/tabeladelivros.html">Acervo</a>
-                <a href="#">Videos</a>
-                <a href="#">Ajuda</a>
-                <a href="">História</a>
+                <a href="/Codigos/Videos/index.html">Videos</a>
+                <a href="/Codigos/FAQ/index.html">Ajuda</a>
+                <a href="#">História</a>
             </section>
             <!--Desenvolvedor Guilherme Ferreira-->
 
