--- a/Index.html
+++ b/Index.html
@@ -21,9 +21,9 @@
                 <!--Definindo os links do menu -->
                 <ul>
                     <li><a href="/Index.html">Pagina Inicial</a></li>
-                    <li><a href="#">Curiosidades</a></li>
+                    <li><a href="/Codigos/Galeria/Index.html">Curiosidades</a></li>
                     <li><a href="/Codigos/Tela_Visitas/Visitas.html">Visitas</a></li>
-                    <li><a href="">Sobre</a></li>
+                    <li><a href="/Codigos/Tela_Visitas/Visitas.html">Sobre</a></li>
                     <li><a href="/Codigos/Tela_Visitas/Visitas.html">Como chegar</a></li>
                 </ul>
             </nav>
@@ -53,7 +53,7 @@
                 <a href="/Codigos/TabelaDeLivros/tabeladelivros.html">Acervo</a>
                 <a href="/Codigos/Videos/index.html">Videos</a>
                 <a href="/Codigos/FAQ/index.html">Ajuda</a>
-                <a href="#">História</a>
+                <a href="/Codigos/Galeria/Index.html">História</a>
             </section>
             <!--Desenvolvedor Guilherme Ferreira-->
 
