--- a/Codigos/Tela_Visitas/Visitas.html
+++ b/Codigos/Tela_Visitas/Visitas.html
@@ -22,11 +22,11 @@
     <nav>
       <!--Definindo os links do menu -->
       <ul>
-        <li><a href="#">Pagina Inicial</a></li>
-        <li><a href="#">Curiosidades</a></li>
-        <li><a href="#">Visitas</a></li>
-        <li><a href="">Sobre</a></li>
-        <li><a href="">Como chegar</a></li>
+        <li><a href="/Index.html">Pagina Inicial</a></li>
+        <li><a href="/Codigos/Galeria/Index.html">Curiosidades</a></li>
+        <li><a href="/Codigos/Tela_Visitas/Visitas.html">Visitas</a></li>
+        <li><a href="/Codigos/Tela_Visitas/Visitas.html">Sobre</a></li>
+        <li><a href="/Codigos/Como_Chegar/ComoChegar.html">Como chegar</a></li>
       </ul>
     </nav>
     <!-- Adicionado dois a para idiomas  -->
