--- a/Codigos/Tela_Visitas/Visitas.html
+++ b/Codigos/Tela_Visitas/Visitas.html
@@ -123,10 +123,10 @@
         <div class="footer-cont">
           <h4>Explore</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Visitas</a></li>
-            <li><a href="#">Ajuda</a></li>
-            <li><a href="#">Sobre</a></li>
+            <li><a href="/Index.html">Home</a></li>
+            <li><a href="/Codigos/Tela_Visitas/Visitas.html">Visitas</a></li>
+            <li><a href="/Codigos/FAQ/index.html">Ajuda</a></li>
+            <li><a href="/Codigos/Tela_Visitas/Visitas.html">Sobre</a></li>
           </ul>
         </div>
         <div class="footer-cont">
