--- a/Codigos/Formulario/Cadastro/index.html
+++ b/Codigos/Formulario/Cadastro/index.html
@@ -27,9 +27,9 @@
             <label for="date">Data de Nascimento</label>
             <input type="date" name="date" required>
 
-            <button class="gmail">Entre com o Gmail</button>
+            <a href="/Index.html"><button class="gmail">Entre com o Gmail</button></a>
             <button>Criar</button>
-            <a href="#">Já tenho conta</a>
+            <a href="/Index.html">Já tenho conta</a>
 
         </form>
     </div>
