--- a/Codigos/Formulario/Login/index.html
+++ b/Codigos/Formulario/Login/index.html
@@ -20,9 +20,9 @@
         <div id="form">
             <input type="email" id="email" placeholder="Email ou telefone">
             <input type="password" id="password" placeholder="Senha">
-            <button class="entrar">Entrar</button>
+            <a href="/Index.html"><button class="entrar">Entrar</button></a>
             <a class="esqueceusenha" href="#">Esqueceu a senha?</a>
-            <a class="cadastro" href="#">Faça seu Cadastro</a>
+            <a class="cadastro" href="/Codigos/Formulario/Cadastro/index.html">Faça seu Cadastro</a>
         </div>
     </section>
     <!--Desenvolvedor Guilherme Ferreira -->
