--- a/Codigos/Tela_Visitas/Visitas.html
+++ b/Codigos/Tela_Visitas/Visitas.html
@@ -15,7 +15,7 @@
     <!--Div que vai agrupar o input de busca e a logo-->
 
     <div id="destaque">
-      <a href="#" class="logo">Biblioteca Nacional</a>
+      <a href="/Index.html" class="logo">Biblioteca Nacional</a>
       <input type="search" class="seach" placeholder="Buscar no Site">
     </div>
 
